[project]
name = "code-to-doc"
version = "0.1.0"
description = "Export source code from a directory tree into a markdown file"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pathspec>=0.12.1",
]

[project.scripts]
code-to-doc = "code_to_doc.cli:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.uv]
package = true
